fix some of the event overflow bugs

--- a/client/src/Components/CalendarWidget/CalendarEntry/CalendarEntry.module.scss
+++ b/client/src/Components/CalendarWidget/CalendarEntry/CalendarEntry.module.scss
@@ -10,6 +10,9 @@
   min-height: 20px;
   font-weight: 200;
   width: 100%;
+  overflow:hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 
   .left {
     display: flex;
@@ -38,10 +41,12 @@
 
     .className {
       margin-right: 1rem;
+      font-size: large;
     }
     
     .eventName {
       font-weight: 400;
+      font-size: medium;
     }
 
   }
