--- a/client/src/Components/CalendarWidget/CalendarEntryDetailedModal/CalendarEntryDetailedModal.module.scss
+++ b/client/src/Components/CalendarWidget/CalendarEntryDetailedModal/CalendarEntryDetailedModal.module.scss
@@ -6,6 +6,7 @@
   -webkit-box-shadow: 8px 6px 17px -3px rgba(0,0,0,0.15); 
   box-shadow: 8px 6px 17px -3px rgba(0,0,0,0.15);
 
+
   .svg {
     position: absolute;
     top: 0;
@@ -24,12 +25,15 @@
     .top {
       margin-bottom: 5%;
       height: 26%;
+      overflow:hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 
       h1 {
         font-weight: 400;
         font-size: 1.8rem;
         font-style: normal;
-        margin-bottom: 0.3rem;
+        margin-bottom: 0.3rem;        
       }
       h2 {
         font-family: Inter;
@@ -43,10 +47,14 @@
 
     .center {
       height: 55%;
+      overflow-wrap:break-word;
+      text-overflow:clip;
+      overflow: hidden;
       h3 {
         font-size: 1rem;
-        font-weight: 200;
+        font-weight: bold;
         margin-bottom: 2%;
+
       }
 
       // errors logs based on user; based on page; log everything?
@@ -57,15 +65,20 @@
 
     .botton {
       display: flex;
-      height: 8%;
       justify-content: center;
 
       button {
         color: white;
-        width: 80%;
+        width: 50%;
         border: 0px;
         border-radius: 5px;
         background-color: var(--grey-background);
+        padding-top: 15px;
+        padding-bottom: 15px;
+        text-align: center;
+        margin: 5px;
+        font-weight: bold;
+        box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
 
         &:hover {
           cursor: pointer;
