--- a/client/src/Components/CalendarWidget/CalendarEntryModal/CalendarEntryModal.module.scss
+++ b/client/src/Components/CalendarWidget/CalendarEntryModal/CalendarEntryModal.module.scss
@@ -6,6 +6,23 @@
     flex-direction: column;
     width: 100%;
     gap: 0.3rem;
+  
+  .descTextBox {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.7rem;
+    border: 1px solid grey;
+    border-radius: 8px;
+    height: 10rem;
+    resize: none;
+  }
+
+  .formTitle {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+  }
 
     .formEntry {
       width: 100%;
@@ -15,13 +32,17 @@
 
       p {
         padding: 0;
-        margin: 0;
+        margin: 2px;
         color: red;
         font-size: 0.8rem;
+        font-family: Arial, Helvetica, sans-serif;
       }
 
       label {
         font-size: 0.8rem;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 0.8rem;
+        font-weight: bold;
       }
 
       input, select {
