--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: var(--font);
+  font-family: Arial, Helvetica, sans-serif;
+  ;
 }
 
 html, body {
@@ -14,6 +15,7 @@ html, body {
 
 body {
   color: var(--text-black);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 code {
